--- a/css/main.scss
+++ b/css/main.scss
@@ -14,9 +14,11 @@ $titling-font:  'Allura', cursive;
 $hebrew-font: "Mazon Hebrew", serif;
 $text-size: #{18px/24px}; // interpolation prevents division.
 $heading-sizes: 150px, 100px, 50px, 26px, 22px, 18px;
-$mobile-heading-sizes: 40px, 34px, 28px, 24px, 20px, 18px;
+$mobile-heading-sizes: 40px, 38px, 28px, 24px, 20px, 18px;
 $sm-width: 50%;
 $sm-pad: 10%;
+$sm-width-mobile: 70%;
+$sm-pad-mobile: 10%;
 $lg-width: 80%;
 
 
